# shearCT

./: .gitignore  CMakeLists.txt  Doxyfile  StringAndNumber.h  demo.cpp  demo.h  gnuplot.h  main.cpp
Demo/: demo.cpp  demo.h
Geom/: Basis.cpp  Basis.h  CALIncludes.h  CgalAliases.h  Geom.cpp  Geom.h  Transformation.cpp  Transformation.h
Geometry/: Basis.cpp  Basis.h  Rotation.cpp  Rotation.h  Stretch.cpp  Stretch.h  Transformation.cpp  Transformation.h  TransformationFunctor.h  Translation.cpp  Translation.h
NcCt/: NcCt.cpp  NcCt.h  RegionCt.cpp  RegionCt.h
NcOps/: Image.cpp  Image.h  Region.cpp  Region.h
NetCdfCt/: Image.cpp  Image.h  Region.cpp  Region.h
Points/: Points.cpp  Points.h
PointsCt/: PointsCt.cpp  PointsCt.h
Procedures/: DemoSchema.cpp  DemoSchema.h  DemoStretchZvsShift.cpp  DemoStretchZvsShift.h  DemoVideo.cpp  DemoVideo.h  ScanGridUtilities.cpp  ScanGridUtilities.h  StretchZvsShift.cpp  StretchZvsShift.h  SwellingSchema.cpp  SwellingSchema.h  UniformSearch.cpp  UniformSearch.h  demoSchema.cpp  demoSchema.h  demoVideo.cpp  demoVideo.h  points.cpp  points.h  stretchZvsShift.cpp  stretchZvsShift.h  variation.cpp  variation.h
Registration/: Registration.cpp  Registration.h
ScanGrid/: ScanGrid.cpp  ScanGrid.h
VtkOps/: ScanGridIO.cpp  ScanGridIO.h
Vtp/: PointsIO.cpp  PointsIO.h  ScanGridIO.cpp  ScanGridIO.h
VtpCt/: VtkPointsCt.cpp  VtkPointsCt.h  VtpCt.cpp  VtpCt.h
geometry/: Basis.cpp  Basis.h  CMakeLists.txt  Rotation.cpp  Rotation.h  Stretch.cpp  Stretch.h  TransformationFunctor.h  Translation.cpp  Translation.h
inOut/: .gitignore
ncOps/: CMakeLists.txt  Image.cpp  Image.h  Region.cpp  Region.h
procedures/: CMakeLists.txt  demoSchema.cpp  demoSchema.h  scanGridUtilities.cpp  scanGridUtilities.h  swellingSchema.cpp  swellingSchema.h  uniformSearch.cpp  uniformSearch.h
registration/: CMakeLists.txt  Registration.cpp  Registration.h
scanGrid/: CMakeLists.txt  ScanGrid.cpp  ScanGrid.h
scripts/: CMakeLists.txt  swelling.py  wrapper.cpp
utilities/: gnuplot.h  stringAndNumber.h
vtkOps/: CMakeLists.txt  ScanGridIO.cpp  ScanGridIO.h
